Only issues/advisors text align left on mobile

--- a/src/sass/components/_intro-modal.scss
+++ b/src/sass/components/_intro-modal.scss
@@ -114,7 +114,9 @@
   &__span {
     white-space: nowrap;
     overflow: hidden;
-    text-align: start;
+    @include breakpoints (max mid-small) {
+      text-align: start;
+    }
   }
 
   &__margin-right {
